made more changes

--- a/analogous.html
+++ b/analogous.html
@@ -64,7 +64,7 @@
         
         nav li>a:hover,
         nav li>a:active {
-            color: #8090FF 
+            color: #A4A9E8 
         }
         
         p {
