--- a/complementary.html
+++ b/complementary.html
@@ -53,7 +53,7 @@
         }
         nav li>a:hover,
         nav li>a:active{
-            color: #5BA1FF;
+            color: #E9ACFF;
         }
         p{
             font-size: 1.414rem;
