--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
         nav li>a:hover,
         nav li>a:active{
-            color: #2D797F;
+            color: #67617F;
         }
         p{
             font-size: 1.414rem;
